@@ -11,7 +11,7 @@ find-links += ${buildout:directory}/3rdParty
 [app]
 recipe = zc.recipe.egg
 interpreter = python
-eggs = icemac.addressbook
+eggs = icemac.addressbook[chameleon]
        zope.securitypolicy
        z3c.evalexception
        Paste
@@ -20,6 +20,7 @@ eggs = icemac.addressbook
 initialization = import os
                  os.environ['zope_i18n_compile_mo_files'] = 'True'
                  os.environ['zope_i18n_allowed_languages'] = 'de,en'
+                 os.environ['CHAMELEON_CACHE'] = '${buildout:directory}/chameleon-cache'
 
 
 # pycountry needs lxml, tests, too
@@ -114,12 +115,13 @@ user = ${zdaemon.conf:user}
 [test-env]
 zope_i18n_compile_mo_files = True
 zope_i18n_allowed_languages = de,en
+CHAMELEON_CACHE = ${buildout:directory}/chameleon-cache
 
 # XXX zc.recipe.testrunner does not write the environment when used in a
 # virtualenv, so using collective.xmltestreport which works at least.
 [test]
 recipe = collective.xmltestreport
-eggs = icemac.addressbook [test]
+eggs = icemac.addressbook [test,chameleon]
 environment = test-env
 
 [zodb]
