@@ -10,7 +10,7 @@ libxslt = 1.1.26
 url-base = http://xmlsoft.org/sources
 
 [versions]
-Chameleon = 1.2.13
+Chameleon = 2.6.0
 MacFSEvents = 0.2.4
 StableDict = 0.2
 buildout-script = 0.2a1
@@ -58,26 +58,27 @@ z3c.coverage = 1.2.0
 z3c.etestbrowser = 2.0.0
 z3c.evalexception = 2.0
 z3c.flashmessage = 1.3
-z3c.form = 2.4.4
+z3c.form = 2.5.1
 z3c.formui = 2.2.0
 z3c.layer.pagelet = 1.9.0
 z3c.locales = 0.3.1
-z3c.macro = 1.3.0
+z3c.macro = 1.4.1
 z3c.menu.ready2go = 0.8.0
-z3c.pagelet = 1.2.1
+z3c.pagelet = 1.3.0
 z3c.preference = 0.1.1
 z3c.profiler = 0.10.0
-z3c.pt = 1.2.1
-z3c.ptcompat = 0.5.6
+z3c.pt = 2.1.5
+z3c.ptcompat = 1.0
 z3c.recipe.staticlxml = 0.8
 z3c.table = 0.9.1
-z3c.template = 1.2.1
+z3c.template = 1.4.0
 z3c.wizard = 0.9.1
 z3c.zrtresource = 1.3.0
 zc.catalog = 1.5
 zc.recipe.cmmi = 1.3.5
 zope.globalrequest = 1.0
 zope.preference = 3.8.0
+ordereddict = 1.1
 
 # ZTK overrides:
 lxml = ${lxml-data:lxml}
@@ -88,6 +89,7 @@ zope.testbrowser = 4.0.2
 zope.app.wsgi = 3.13.0
 zope.security = 3.8.3
 mr.developer = 1.19
+zope.pagetemplate = 3.6.3
 
 # apidoc
 zope.app.apidoc = 3.7.5
